Python 70% done
Had issues with deserialization of the database objects to json
